Services/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - args:
        - /bin/sh
        - -c
        - while true; do curl ifconfig.co; sleep 15; done
        name: qbittorrent
        image: linuxserver/qbittorrent
        ports:
          - name: web
            containerPort: 8080
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: qbittorrent
          - mountPath: "/qbittorrent/downloads"
            readOnly: false
            name: smb
            subPath: qbittorrent/downloads
      volumes:
        - name: tun-device
          hostPath:
            path: /dev/net/tun
            type: CharDevice 
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-qbittorrent-smb
        - name: qbittorrent
          persistentVolumeClaim:
            claimName: qbittorrent
