Services/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 192.168.1.126
