Services/qbittorrent/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.zlaya.tech`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: oidc-auth
          namespace: torrent
  tls:
    secretName: zlayatech-production-tls
